added lottie draw example

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "web-build": "webpack build --config webpack.web.config.js",
+    "web-build": "webpack build --config webpack.config.js",
     "node-build": "webpack build --config webpack.node.config.js",
     "node-run": "node scripts/main.js",
     "node": "npm run node-build && npm run node-run"
@@ -14,7 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "canvaskit-wasm": "^0.38.2",
-    "node-fetch": "^3.3.1"
+    "node-fetch": "^3.3.1",
+    "stats.js": "^0.17.0"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^11.0.0",
