--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "canvaskit-wasm": "^0.38.2",
     "node-fetch": "^3.3.1",
+    "pixi.js": "^7.2.4",
     "stats.js": "^0.17.0"
   },
   "devDependencies": {
